objects/amc__Billing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains Information Related to Billing.  Primarily Invoice Information</description>
    <fields>
        <fullName>amc__Business_Number__c</fullName>
        <inlineHelpText>Add Business Number here. e.g. ABN: 1232 2234 1123</inlineHelpText>
        <label>Business Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Credit_Name__c</fullName>
        <inlineHelpText>The Header Text at the top of the Credit Template e.g. CREDIT NOTE</inlineHelpText>
        <label>Credit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Footer_Notes__c</fullName>
        <inlineHelpText>Information entered here appears at the bottom of your Invoice/Credit Note.</inlineHelpText>
        <label>Invoice Footer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Name__c</fullName>
        <inlineHelpText>The Header of the Invoice Template e.g. TAX INVOICE</inlineHelpText>
        <label>Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Logo_URL__c</fullName>
        <inlineHelpText>Reference to a Secure, Publicly Available Logo (130x80px)</inlineHelpText>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Logo_Width__c</fullName>
        <label>Logo Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Remove_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Removes the Mission Control Logo from the Bottom of the Invoice/Credit Note</inlineHelpText>
        <label>Remove Logo</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing</label>
</CustomObject>